--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "boundstate/yii2-mailgun",
+    "name": "newrow/yii2-mailgun",
     "description": "Mailgun integration for the Yii framework",
     "type": "yii2-extension",
     "keywords": ["yii2", "extension", "rackspace", "mailgun", "mail", "email", "mailer"],
@@ -12,11 +12,11 @@
     ],
     "require": {
         "yiisoft/yii2": ">=2.0.4",
-        "mailgun/mailgun-php": "~1.8"
+        "zeljkobgd81/mailgun-guzzle-6": "*"
     },
     "autoload": {
         "psr-4": {
-            "boundstate\\mailgun\\": ""
+            "newrow\\mailgun\\": ""
         }
     }
 }
