change guzzle version

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "Apache-2.0",
     "authors": [
         {
-            "name": "Nir Eliyahu",
+            "name": "Nir Eliyahu - Newrow",
             "email": "nir@newrow.com"
         }
     ],
