--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "yiisoft/yii2": ">=2.0.4",
-        "zeljkobgd81/mailgun-guzzle-6": "dev-master"
+        "mailgun/mailgun-php": "~2"
     },
     "autoload": {
         "psr-4": {
